--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,9450],[],[[4,0,0,[],[0,489,8959,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,11739],[],[[4,0,0,[],[1,511,11207],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*FleekIt","*D:\\PythonExcersiseFiles\\Day1PythonProgramming\\Day7\\FleekIt.robot","*Day7/FleekIt.robot","*TC_03","*\"\"\"ignite.online\"\"\" != \"\"\"\"\"\""]);
+window.output["strings"] = window.output["strings"].concat(["*","*CheckBox","*D:\\PythonExcersiseFiles\\Day1PythonProgramming\\Day8\\CheckBox.robot","*Day8/CheckBox.robot","*TC:01"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:09","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:09","fail":1,"id":"s1","label":"FleekIt","name":"FleekIt","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"CheckBox","name":"CheckBox","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1657611257120;
+window.output["baseMillis"] = 1657692259386;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 9487;
+window.output["generated"] = 11772;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
