--- a/Reports/report.html
+++ b/Reports/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,0,0,0,[],[1,0,83],[[2,3,4,0,[],[1,40,21],[],[[5,0,6,[7],[1,46,4],[]],[8,0,9,[7],[1,52,2],[]],[10,0,11,[7],[1,56,2],[]]],[],[3,3,0,0]],[12,13,14,0,[],[1,63,18],[],[[5,0,6,[7],[1,68,2],[]],[8,0,9,[7],[1,72,2],[]],[10,0,11,[7],[1,76,3],[]]],[],[3,3,0,0]]],[],[],[6,6,0,0]];
+window.output["suite"] = [1,0,0,2,[],[1,0,59433],[[3,4,5,0,[],[1,983,15808],[],[[6,0,0,[],[1,1500,15291],[]]],[],[1,1,0,0]],[7,8,9,0,[],[1,983,14489],[],[[6,0,0,[],[1,1500,13972],[]]],[],[1,1,0,0]],[10,11,12,0,[],[1,16522,12335],[],[[13,0,0,[],[1,16923,11934],[]]],[],[1,1,0,0]],[14,15,16,0,[],[1,17867,22854],[],[[17,0,0,[],[1,19482,10293],[]],[18,0,0,[],[1,29775,10946],[]]],[],[2,2,0,0]],[19,20,21,0,[],[1,29791,9990],[],[[17,0,0,[],[1,36526,467],[]],[18,0,0,[],[1,36994,284],[]]],[],[2,2,0,0]],[22,23,24,0,[],[1,40783,18228],[],[[6,0,0,[],[1,41138,17873],[]]],[],[1,1,0,0]]],[],[],[8,8,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*RunByTag &amp; RunByTag S1","*RunByTag","*D:\\PythonExcersiseFiles\\Day1PythonProgramming\\Day6\\RunByTag.robot","*../Day6/RunByTag.robot","*Google_Home_Page1","*<p>As a user, I am validating Google URL1, buttons1, textboxes1, links1\x3c/p>","*Smoke","*Google_Home_Page4","*<p>As a user, I am validating Google URL4, buttons4, textboxes4, links4\x3c/p>","*Google_Home_Page7","*<p>As a user, I am validating Google URL7, buttons7, textboxes7, links7\x3c/p>","*RunByTag S1","*D:\\PythonExcersiseFiles\\Day1PythonProgramming\\Day6\\RunByTag_S1.robot","*../Day6/RunByTag_S1.robot"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Suites","*<p><a href=\"https://pabot.org/?ref=log\">Pabot\x3c/a> result from 6 executions.\x3c/p>","*CheckBox","*D:\\PythonExcersiseFiles\\Day1PythonProgramming\\Day8\\CheckBox.robot","*../Day8/CheckBox.robot","*SS:01","*HTMLTable","*D:\\PythonExcersiseFiles\\Day1PythonProgramming\\Day8\\HTMLTable.robot","*../Day8/HTMLTable.robot","*RadioButton","*D:\\PythonExcersiseFiles\\Day1PythonProgramming\\Day8\\RadioButton.robot","*../Day8/RadioButton.robot","*Radio_Button:01","*SetUpAndTearDownBrowsers","*D:\\PythonExcersiseFiles\\Day1PythonProgramming\\Day8\\SetUpAndTearDownBrowsers.robot","*../Day8/SetUpAndTearDownBrowsers.robot","*Print_All_Links_TC_01","*Print_All_Links_TC_02","*TestSuiteSetup","*D:\\PythonExcersiseFiles\\Day1PythonProgramming\\Day8\\TestSuiteSetup.robot","*../Day8/TestSuiteSetup.robot","*UploadFileInRobot","*D:\\PythonExcersiseFiles\\Day1PythonProgramming\\Day8\\UploadFileInRobot.robot","*../Day8/UploadFileInRobot.robot"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":0,"label":"All Tests","pass":6,"skip":0}],[{"elapsed":"00:00:00","fail":0,"label":"Smoke","pass":6,"skip":0}],[{"elapsed":"00:00:00","fail":0,"id":"s1","label":"RunByTag &amp; RunByTag S1","name":"RunByTag &amp; RunByTag S1","pass":6,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s1","label":"RunByTag &amp; RunByTag S1.RunByTag","name":"RunByTag","pass":3,"skip":0},{"elapsed":"00:00:00","fail":0,"id":"s1-s2","label":"RunByTag &amp; RunByTag S1.RunByTag S1","name":"RunByTag S1","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:21","fail":0,"label":"All Tests","pass":8,"skip":0}],[],[{"elapsed":"00:00:59","fail":0,"id":"s1","label":"Suites","name":"Suites","pass":8,"skip":0},{"elapsed":"00:00:16","fail":0,"id":"s1-s1","label":"Suites.CheckBox","name":"CheckBox","pass":1,"skip":0},{"elapsed":"00:00:14","fail":0,"id":"s1-s2","label":"Suites.HTMLTable","name":"HTMLTable","pass":1,"skip":0},{"elapsed":"00:00:12","fail":0,"id":"s1-s3","label":"Suites.RadioButton","name":"RadioButton","pass":1,"skip":0},{"elapsed":"00:00:23","fail":0,"id":"s1-s4","label":"Suites.SetUpAndTearDownBrowsers","name":"SetUpAndTearDownBrowsers","pass":2,"skip":0},{"elapsed":"00:00:10","fail":0,"id":"s1-s5","label":"Suites.TestSuiteSetup","name":"TestSuiteSetup","pass":2,"skip":0},{"elapsed":"00:00:18","fail":0,"id":"s1-s6","label":"Suites.UploadFileInRobot","name":"UploadFileInRobot","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1657597898255;
+window.output["baseMillis"] = 1657709333148;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 107;
+window.output["generated"] = 59465;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
