--- a/log.html
+++ b/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,11739],[],[[4,0,0,[],[1,511,11207],[[0,5,6,0,7,8,0,0,[1,512,8316],[[512,2,9]]],[0,10,6,0,11,0,0,0,[1,8829,139],[]],[0,12,6,0,13,14,0,0,[1,8969,13],[]],[0,15,6,0,16,17,0,0,[1,8983,53],[[8983,2,18]]],[0,19,6,0,20,21,0,0,[1,9037,45],[[9037,2,22]]],[0,23,6,0,24,17,0,0,[1,9083,66],[[9084,2,25]]],[0,19,6,0,20,17,0,0,[1,9149,38],[[9150,2,26]]],[0,19,6,0,20,21,0,0,[1,9187,37],[[9187,2,22]]],[0,23,6,0,24,21,0,0,[1,9224,59],[[9225,2,27]]],[0,15,6,0,16,21,0,0,[1,9284,29],[[9284,2,28]]],[0,19,6,0,20,17,0,0,[1,9313,29],[[9313,2,26]]],[0,29,6,0,30,0,0,0,[1,9342,2367],[]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,16811],[],[[4,0,0,[],[1,772,16037],[[0,5,6,0,7,8,0,0,[1,774,10861],[[774,2,9]]],[0,10,6,0,11,0,0,0,[1,11640,212],[]],[0,12,13,0,0,14,15,0,[1,11853,1],[[11854,2,16]]],[0,17,6,0,18,19,0,0,[1,11856,92],[[11857,2,20]]],[0,21,22,0,23,24,0,0,[1,11950,2015],[[13965,2,25]]],[0,26,6,0,27,0,0,0,[1,13966,2842],[]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*CheckBox","*D:\\PythonExcersiseFiles\\Day1PythonProgramming\\Day8\\CheckBox.robot","*Day8/CheckBox.robot","*TC:01","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://the-internet.herokuapp.com/checkboxes\">https://the-internet.herokuapp.com/checkboxes\x3c/a>, Chrome","*Opening browser 'Chrome' to base url '<a href=\"https://the-internet.herokuapp.com/checkboxes\">https://the-internet.herokuapp.com/checkboxes\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Wait Until Page Contains Element","*<p>Waits until the element <code>locator\x3c/code> appears on the current page.\x3c/p>","*//h3[text()='Checkboxes']","*Checkbox Should Not Be Selected","*<p>Verifies checkbox <code>locator\x3c/code> is not selected/checked.\x3c/p>","*(//input[@type='checkbox'])[1]","*Verifying checkbox '(//input[@type='checkbox'])[1]' is not selected.","*Checkbox Should Be Selected","*<p>Verifies checkbox <code>locator\x3c/code> is selected/checked.\x3c/p>","*(//input[@type='checkbox'])[2]","*Verifying checkbox '(//input[@type='checkbox'])[2]' is selected.","*Click Element","*<p>Click the element identified by <code>locator\x3c/code>.\x3c/p>","*Clicking element '(//input[@type='checkbox'])[1]'.","*Verifying checkbox '(//input[@type='checkbox'])[1]' is selected.","*Clicking element '(//input[@type='checkbox'])[2]'.","*Verifying checkbox '(//input[@type='checkbox'])[2]' is not selected.","*Close All Browsers","*<p>Closes all open browsers and resets the browser cache.\x3c/p>"]);
+window.output["strings"] = window.output["strings"].concat(["*","*UploadFileInRobot","*D:\\PythonExcersiseFiles\\Day1PythonProgramming\\Day8\\UploadFileInRobot.robot","*Day8/UploadFileInRobot.robot","*SS:01","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*<a href=\"https://the-internet.herokuapp.com/upload\">https://the-internet.herokuapp.com/upload\x3c/a>, Chrome","*Opening browser 'Chrome' to base url '<a href=\"https://the-internet.herokuapp.com/upload\">https://the-internet.herokuapp.com/upload\x3c/a>'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*My Image Path","*Reusable","*selenium-screenshot-1.png","*${fileName}","*${fileName} = D:\\PythonExcersiseFiles\\Day1PythonProgramming/selenium-screenshot-1.png","*Choose File","*<p>Inputs the <code>file_path\x3c/code> into the file input field <code>locator\x3c/code>.\x3c/p>","*file-upload, ${fileName}","*Sending D:\\PythonExcersiseFiles\\Day1PythonProgramming\\selenium-screenshot-1.png to browser.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2","*Slept 2 seconds","*Close All Browsers","*<p>Closes all open browsers and resets the browser cache.\x3c/p>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"CheckBox","name":"CheckBox","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"UploadFileInRobot","name":"UploadFileInRobot","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1657692259386;
+window.output["baseMillis"] = 1657696819559;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 11772;
+window.output["generated"] = 16839;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
