--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,11739],[],[[4,0,0,[],[1,511,11207],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,16811],[],[[4,0,0,[],[1,772,16037],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*CheckBox","*D:\\PythonExcersiseFiles\\Day1PythonProgramming\\Day8\\CheckBox.robot","*Day8/CheckBox.robot","*TC:01"]);
+window.output["strings"] = window.output["strings"].concat(["*","*UploadFileInRobot","*D:\\PythonExcersiseFiles\\Day1PythonProgramming\\Day8\\UploadFileInRobot.robot","*Day8/UploadFileInRobot.robot","*SS:01"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:11","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:12","fail":0,"id":"s1","label":"CheckBox","name":"CheckBox","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:17","fail":0,"id":"s1","label":"UploadFileInRobot","name":"UploadFileInRobot","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1657692259386;
+window.output["baseMillis"] = 1657696819559;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 11772;
+window.output["generated"] = 16839;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
